# psb-project-sql-injection

./: .gitignore  Attacks.md  Config.md  Dockerfile  Frontend.md  README.md  SQL_Injection.py  Sources.md  TODO.md  config.ini  connections.db  connections.py  pyproject.toml  setup_connections.py  try_injection.py
app/: SQL_Injection.py  config.ini  db.py
app/pages/: Zapytanie SQL.py
connections-db/: setup_connections.sql
dellstore2/: setup_dellstore2.sql
pages/: 1_Zadanie_1_-_Logowanie.py  2_Zadanie_2_-_Wyszukiwarka.py
psb-project/: SQL_Injection.py  config.ini  db.py
psb-project/pages/: Panel logowania.py  Zapytanie SQL.py
psb_project/: SQL_Injection.py  config.ini  db.py
psb_project/dellstore2/: database_readable_passwords.csv  setup_db.sql
psb_project/pages/: Panel logowania.py  Wyszukiwanie filmów.py
